# edge-ai-MCP

./: README.md  pyproject.toml  requirements.txt  server.py
scripts/: stack_server.py  test_sitl.py  test_unit.py
src/edge_ai_mcp/: __init__.py  config.py  http_server.py  limits.py  mavsdk_client.py  mission_builder.py  responses.py  telemetry_cache.py  tool_dispatch.py
src/edge_ai_mcp/tools/: __init__.py  connection.py  flight.py  mission.py  peripherals.py  telemetry.py
